manifests/apps/open-webui/open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: open-webui
  name: open-webui
  namespace: open-webui
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: open-webui
