manifests/apps/open-webui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chat.savew.dev`)
      priority: 10
      services:
        - kind: Service
          name: open-webui
          namespace: open-webui
          passHostHeader: true
          port: 8080
          scheme: http
  tls:
    secretName: wildcard-savew.dev-tls
    domains:
      - main: chat.savew.dev
